# momo_proj

./: .gitignore  DECISIONS.md  ITERATIONS.md  NOTICE  README.md  build_nb.py  paper.tex  paper_ru.tex  project_proposal.tex  project_proposal.typ  project_proposal_short.typ  pyproject.toml  refs.bib  refs_short.bib  report.typ  report_v2.tex  reproduce.sh  solutions.typ  update_preamble.py
data/: README.md
experiments/: compare_learnable_v1_v2.py  fetch_data.py  make_clipping_figure.py  make_convergence_figures.py  make_figures.py  make_master_heatmap.py  make_mode_figures.py  make_noise_filter_examples.py  make_real_figures.py  make_report_figures.py  make_spectral_figure.py  make_tldr_figure.py  make_trajectory_figure.py  make_walkforward_figure.py  run_applied_convergence.py  run_batch_size_ablation.py  run_calibrated_synthetic.py  run_clipping_ablation.py  run_convergence_rescue.py  run_cross_asset_transfer.py  run_filter_diagnostics.py  run_filter_speed_benchmark.py  run_intraday.py  run_meta_routing_sensitivity.py  run_microstructure.py  run_mode_comparison_sweep.py  run_multistep_horizon.py  run_real_convergence.py  run_real_full_ho.py  run_real_sign_prediction.py  run_real_sweep.py  run_real_walkforward.py  run_real_walkforward_causal.py  run_semisynthetic.py  run_sigma_scan.py  run_signpred_causal.py  run_signpred_window_sweep.py  run_stress_test.py  run_synthetic_sweep.py  run_volatility_forecast.py  (+3 more)
figures/: prox_table.csv
models/: learnable_filter.pt  learnable_filter_v2.pt
notebooks/: 01_cg_preconditioned.ipynb  02_newton_logreg.ipynb  (+5 more)
(+3137 files in other folders)
