[project]
name = "momo"
version = "0.1.0"
description = "Denoising as preprocessing for stochastic optimization on financial time series"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "torch>=2.4",
    "pywavelets>=1.6",
    "filterpy>=1.4",
    "statsmodels>=0.14",
    "hurst>=0.0.5",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "pyarrow>=15",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-xdist>=3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "-q"
